--- a/src/app/components/layout/counts-section/counts-section.component.html
+++ b/src/app/components/layout/counts-section/counts-section.component.html
@@ -1,42 +1,39 @@
- <!-- ======= Counts Section ======= -->
- <section id="counts" class="counts">
-    <div class="container">
-
-      <div class="row" data-aos="fade-up">
-
-        <div class="col-lg-3 col-md-6">
-          <div class="count-box">
-            <i class="icofont-simple-smile"></i>
-            <span data-toggle="counter-up">500</span>
-            <p>Happy children</p>
-          </div>
+<!-- ======= Counts Section ======= -->
+<section id="counts" class="counts">
+  <div class="container">
+    <div class="row" data-aos="fade-up">
+      <div class="col-lg-3 col-md-6">
+        <div class="count-box">
+          <i class="icofont-simple-smile"></i>
+          <span data-toggle="counter-up">500</span>
+          <p>Happy children</p>
         </div>
-
-        <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
-          <div class="count-box">
-            <i class="icofont-document-folder"></i>
-            <span data-toggle="counter-up">521</span>
-            <p>Projects</p>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
-          <div class="count-box">
-            <i class="icofont-live-support"></i>
-            <span data-toggle="counter-up">1,463</span>
-            <p>AVAVAVAV</p>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
-          <div class="count-box">
-            <i class="icofont-users-alt-5"></i>
-            <span data-toggle="counter-up">20</span>
-            <p>Courses</p>
-          </div>
-        </div>
-
       </div>
 
+      <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
+        <div class="count-box">
+          <i class="icofont-document-folder"></i>
+          <span data-toggle="counter-up">521</span>
+          <p>Projects</p>
+        </div>
+      </div>
+
+      <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
+        <div class="count-box">
+          <i class="icofont-live-support"></i>
+          <span data-toggle="counter-up">1,463</span>
+          <p>AVAVAVAV</p>
+        </div>
+      </div>
+
+      <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
+        <div class="count-box">
+          <i class="icofont-users-alt-5"></i>
+          <span data-toggle="counter-up">20</span>
+          <p>Courses</p>
+        </div>
+      </div>
     </div>
-  </section><!-- End Counts Section -->
+  </div>
+</section>
+<!-- End Counts Section -->
