--- a/src/app/components/layout/gallery-section/gallery-section.component.html
+++ b/src/app/components/layout/gallery-section/gallery-section.component.html
@@ -1,78 +1,78 @@
 <section id="gallery" class="gallery">
-  <div class="container">
-    <div class="section-title" data-aos="fade-up">
-      <h2>Gallery</h2>
-      <p>Check our Gallery</p>
+    <div class="container">
+
+      <div class="section-title" data-aos="fade-up">
+        <h2>Gallery</h2>
+        <p>Check our Gallery</p>
+      </div>
+
+      <div class="row no-gutters" data-aos="fade-left">
+
+        <div class="col-lg-3 col-md-4">
+          <div class="gallery-item" data-aos="zoom-in" data-aos-delay="100">
+            <a href="" class="venobox" data-gall="gallery-item">
+              <img src="https://smicks11.github.io/supremechords/assets/img/james.jpg" alt="" class="img-fluid">
+            </a>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-4">
+          <div class="gallery-item" data-aos="zoom-in" data-aos-delay="150">
+            <a href="" class="venobox" data-gall="gallery-item">
+              <img src="" alt="" class="img-fluid">
+            </a>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-4">
+          <div class="gallery-item" data-aos="zoom-in" data-aos-delay="200">
+            <a href="" class="venobox" data-gall="gallery-item">
+              <img src="" alt="" class="img-fluid">
+            </a>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-4">
+          <div class="gallery-item" data-aos="zoom-in" data-aos-delay="250">
+            <a href="" class="venobox" data-gall="gallery-item">
+              <img src="" alt="" class="img-fluid">
+            </a>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-4">
+          <div class="gallery-item" data-aos="zoom-in" data-aos-delay="300">
+            <a href="" class="venobox" data-gall="gallery-item">
+              <img src="" alt="" class="img-fluid">
+            </a>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-4">
+          <div class="gallery-item" data-aos="zoom-in" data-aos-delay="350">
+            <a href="" class="venobox" data-gall="gallery-item">
+              <img src="" alt="" class="img-fluid">
+            </a>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-4">
+          <div class="gallery-item" data-aos="zoom-in" data-aos-delay="400">
+            <a href="" class="venobox" data-gall="gallery-item">
+              <img src="" alt="" class="img-fluid">
+            </a>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-4">
+          <div class="gallery-item" data-aos="zoom-in" data-aos-delay="450">
+            <a href="" class="venobox" data-gall="gallery-item">
+              <img src="" alt="" class="img-fluid">
+            </a>
+          </div>
+        </div>
+
+      </div>
+
     </div>
-
-    <div class="row no-gutters" data-aos="fade-left">
-      <div class="col-lg-3 col-md-4">
-        <div class="gallery-item" data-aos="zoom-in" data-aos-delay="100">
-          <a href="" class="venobox" data-gall="gallery-item">
-            <img
-              src="https://smicks11.github.io/supremechords/assets/img/james.jpg"
-              alt=""
-              class="img-fluid"
-            />
-          </a>
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-md-4">
-        <div class="gallery-item" data-aos="zoom-in" data-aos-delay="150">
-          <a href="" class="venobox" data-gall="gallery-item">
-            <img src="" alt="" class="img-fluid" />
-          </a>
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-md-4">
-        <div class="gallery-item" data-aos="zoom-in" data-aos-delay="200">
-          <a href="" class="venobox" data-gall="gallery-item">
-            <img src="" alt="" class="img-fluid" />
-          </a>
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-md-4">
-        <div class="gallery-item" data-aos="zoom-in" data-aos-delay="250">
-          <a href="" class="venobox" data-gall="gallery-item">
-            <img src="" alt="" class="img-fluid" />
-          </a>
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-md-4">
-        <div class="gallery-item" data-aos="zoom-in" data-aos-delay="300">
-          <a href="" class="venobox" data-gall="gallery-item">
-            <img src="" alt="" class="img-fluid" />
-          </a>
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-md-4">
-        <div class="gallery-item" data-aos="zoom-in" data-aos-delay="350">
-          <a href="" class="venobox" data-gall="gallery-item">
-            <img src="" alt="" class="img-fluid" />
-          </a>
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-md-4">
-        <div class="gallery-item" data-aos="zoom-in" data-aos-delay="400">
-          <a href="" class="venobox" data-gall="gallery-item">
-            <img src="" alt="" class="img-fluid" />
-          </a>
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-md-4">
-        <div class="gallery-item" data-aos="zoom-in" data-aos-delay="450">
-          <a href="" class="venobox" data-gall="gallery-item">
-            <img src="" alt="" class="img-fluid" />
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+  </section>
